# rusty-home

./: Cargo.toml
media/: rusty-home.drawio
src/: lib.rs  main.rs  mock.rs  sensors.rs
src/protocols/: i2c.rs
src/sensors/: bme280.rs  moisture.rs  veml6030.rs
src/sensors/bme280/: calibration.rs  constants.rs  i2c.rs
src/sensors/moisture/: constants.rs
src/sensors/veml6030/: constants.rs
