[package]
name = "hello-i2c"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
chrono = "0.4.31"
embedded-hal = "0.2.7"
embedded-hal-mock = "0.9.0"
i2cdev = "0.6.0"

[[bin]]
name = "mock"
path = "src/mock.rs"